--- a/2024/1714444800.org
+++ b/2024/1714444800.org
@@ -1,4 +1,4 @@
-* How to do things deliberately                             :learning:quotes:
+* How to do things deliberately                             :learning:notetaking:writing:quotes:
 "And by doing everything with the clear purpose of writing about it, you
 will do what you do /deliberately/." 
 - Sönke Ahrens
