--- a/2024/1714361525.org
+++ b/2024/1714361525.org
@@ -10,4 +10,4 @@ The one thing I'm not too familiar with here is the reference management
 system. My understanding is that it's a place to keep more "concrete"
 things, like references to papers that expand more on an idea mentioned
 in an article or something. They don't contain my own personal thoughts
-about it. That would be in the zettelkasten.
+about it. Those would be in the zettelkasten.
